# IPhysics

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  TODO.md  compile_commands.json  extensions.txt  imgui.ini  test.out
glad/include/glad/: glad.h
glad/src/: glad.c
include/glad/: glad.h
libs/windows/: glfw3.lib
libs/windows/bullet/: Bullet2FileLoader.lib  Bullet2FileLoader_Debug.lib  Bullet3Collision.lib  Bullet3Collision_Debug.lib  Bullet3Common.lib  Bullet3Common_Debug.lib  Bullet3Dynamics.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry.lib  Bullet3Geometry_Debug.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletExampleBrowserLib.lib  BulletFileLoader.lib  BulletFileLoader_Debug.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletSoftBody.lib  BulletWorldImporter.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter.lib  BulletXmlWorldImporter_Debug.lib  BussIK.lib  BussIK_Debug.lib  ConvexDecomposition.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils.lib  GIMPACTUtils_Debug.lib  HACD.lib  LinearMath.lib  LinearMath_Debug.lib  OpenGLWindow.lib  OpenGLWindow_Debug.lib  clsocket.lib  clsocket_Debug.lib  gtest.lib
scenes/: single_block.json
shaders/: HullPass.comp  HullPassCS.hlsl  NeighborPass.comp  bezier.tese  flatColorShader.vert  flatLight.frag  flatLight.vert  flatShader.vert  line.frag  line.vert  phong.frag  phong.vert  phongLight.frag  phongLight.vert  point.vert  pointShader.frag  textureShader.frag  uniformColor.frag  uniformColor.vert
sharedLibrary/: CMakeLists.txt
sharedLibrary/include/: Common.h
sharedLibrary/include/Input/: InputManager.h
sharedLibrary/include/Renderer/: Camera.h  DebugDrawer.h  Gfx.h  IndexBufferObject.h  Mesh.h  MeshLibrary.h  Renderer.h  RendererBackend.h  RendererFrontend.h  Shader.h  ShaderData.h  Texture.h  TextureLibrary.h  Util.h  VertexArrayObject.h  VertexBufferObject.h  VoxelRenderer.h  Window.h  camera.h  mesh.h  meshLibrary.h  shader.h  texture.h  textureLibrary.h  util.h  vertexArrayObject.h  vertexBufferObject.h  window.h
sharedLibrary/include/Utils/: MathCasts.h  QuickCastBuffer.h  Serialization.h  VoxelMeshManager.h  VoxelSerializer.h
sharedLibrary/include/VoxelObjects/: BezierCurve.h  Box.h  EdgeMesh.h  MeshManager.h  Objects.h  Ray.h  Voxel.h  VoxelMesh.h  voxel.h
sharedLibrary/src/Input/: InputManager.cpp
sharedLibrary/src/Renderer/: Camera.cpp  DebugDrawer.cpp  Gfx.cpp  IndexBufferObject.h  MeshLibrary.cpp  Renderer.cpp  RendererBackend.cpp  RendererFrontend.cpp  Shader.cpp  ShaderLibrary.cpp  Window.cpp  glad.c  indexBufferObject.h  shader.cpp  shaderLibrary.cpp  window.cpp
sharedLibrary/src/Utils/: Serialization.cpp  VoxelMeshManager.cpp
sharedLibrary/src/VoxelObjects/: EdgeMesh.cpp  MeshManager.cpp  VoxelMesh.cpp
src/: common.h  main.cpp  window.cpp  window.h
src/Input/: InputManager.cpp  InputManager.h
src/PhysicsEngine/: Ray.h  RayCastWorld.cpp  RayCastWorld.h  Settings.h  physics.cpp  physics.h
src/PhysicsSimulation/: IPhysicsUI.cpp  IPhysicsUI.h  PhysicsSimulationApp.cpp  PhysicsSimulationApp.h  PhysicsSimulationSystem.cpp  PhysicsSimulationSystem.h  System.cpp  System.h  main.cpp
src/ecs/: component.h  componentPool.h  ecs.cpp  ecs.h  entity.h  renderableSystem.cpp  renderableSystem.h  system.h
src/physics/: physics.cpp  physics.h
src/physics-sim/: DebugRenderer.cpp  DebugRenderer.h  IPhysicsUI.cpp  IPhysicsUI.h  Physics.cpp  Physics.h  PhysicsSimulationApp.cpp  PhysicsSimulationApp.h  Scene.cpp  Scene.h  main.cpp
src/physics-sim/PhysicsEngine/: Physics.cpp  Physics.h  Settings.h  physics.cpp  physics.h
src/physics-sim/app/: IPhysicsUI.cpp  IPhysicsUI.h  PhysicsSimulationApp.cpp  PhysicsSimulationApp.h  VoxelMeshManager.cpp  VoxelMeshManager.h  main.cpp
src/renderer/: DebugDrawer.cpp  DebugDrawer.h  RendererBackend.cpp  RendererBackend.h  RendererFrontend.cpp  RendererFrontend.h  ShaderData.h  camera.cpp  camera.h  indexBufferObject.h  mesh.h  meshLibrary.cpp  meshLibrary.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shaderLibrary.h  texture.h  textureLibrary.h  util.h  vertexArrayObject.h  vertexBufferObject.h  window.cpp  window.h
src/utils/: GLMToRP3D.h  MathCasts.h  QuickCastBuffer.h  Serialization.cpp  Serialization.h  VoxelMeshManager.cpp  VoxelMeshManager.h  VoxelSerializer.h
src/voxelGenerator/: System.cpp  System.h  VoxelizerParameters.h  VoxelizerUI.cpp  VoxelizerUI.h  main.cpp  obj.cpp  obj.h  voxelizer.cpp  voxelizer.h
src/voxelObjects/: BezierCurve.h  EdgeMesh.cpp  EdgeMesh.h  VoxelMesh.cpp  VoxelMesh.h  voxel.h
src/voxelizer/: Common.h  Entity.hpp  FileUtils.hpp  Handle.hpp  HeadSystem.cpp  HeadSystem.h  InputSystem.cpp  InputSystem.hpp  Obj.cpp  Obj.h  Objects.h  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ResourceSystem.cpp  ResourceSystem.hpp  System.cpp  System.h  System.hpp  UISystem.cpp  UISystem.hpp  VoxelManager.h  Voxelizer.cpp  Voxelizer.h  VoxelizerParameters.h  VoxelizerUI.cpp  VoxelizerUI.h  Voxelizer_cs.cpp  Voxelizer_cs.h  Voxelizer_old.cpp  Voxelizer_old.h  main.cpp
src/voxelizer/voxelGenerator/: Obj.cpp  System.cpp  System.h  Voxelizer.cpp  Voxelizer.h  VoxelizerParameters.h  VoxelizerUI.cpp  VoxelizerUI.h  obj.cpp  obj.h  voxelizer.cpp  voxelizer.h
test-out/: block-2.vmf
testfiles/: block-1.vmf  block-1p.vmf
voxelMeshes/: block-0p25.vmf  block-0p5.vmf  block-1p.vmf  knife-0p25.vmf  knife-0p5.vmf  knife-1p.vmf  lowsphere-0p25.vmf  lowsphere-0p5.vmf  lowsphere-1p.vmf  teapot-0p25.vmf  teapot-0p5.vmf  teapot-1p.vmf
